--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "scaffold": "node scripts/scaffold.js"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
