--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-responsive": "^10.0.1",
-    "tailwindcss": "^4.1.18",
-    "zustand": "^5.0.11"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
