--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -30,5 +30,5 @@
     "noUncheckedSideEffectImports": true
   },
   "include": ["src"],
-  "exclude": ["src/__tests__", "src/**/__tests__/**"]
+  "exclude": ["src/__tests__", "src/**/__tests__/**", "src/**/*.stories.*", ".storybook/**"]
 }
